unix/lang/tests/error/missing_endif_in_while.yab
#expect#---Error in missing_endif_in_while.yab, line 10: a closing endif is expected before wend
#expect#   wend
#expect#   ^~~~
#expect#---Error: if-statement starting at line 9 has seen no 'endif' yet
#expect#---Error: Couldn't parse program
#expect#---Error: Program not executed
while 2<1
  REM    The next line has no endif
  if 3<2 then print
wend
